[gd_scene load_steps=2 format=3 uid="uid://d2oqirov1e7n3"]

[ext_resource type="Script" path="res://white_box/salad_dream/order_area/order_area.gd" id="1_85bkh"]

[node name="OrderArea" type="Area2D"]
script = ExtResource("1_85bkh")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
